Update algorithm examples