@@ -19,17 +19,13 @@ package com.tencent.angel.spark.examples.cluster
 
 import com.tencent.angel.conf.AngelConf
 import com.tencent.angel.ps.storage.matrix.PartitionSourceArray
-import com.tencent.angel.spark.context.PSContext
 import com.tencent.angel.spark.ml.core.ArgsUtil
-import com.tencent.angel.spark.ml.embedding.Param
-import com.tencent.angel.spark.ml.embedding.line2.LINEModel
-import com.tencent.angel.spark.ml.feature.{Features, SubSampling}
+import com.tencent.angel.spark.ml.embedding.line2.LINE
+import com.tencent.angel.spark.ml.graph.utils.GraphIO
 import com.tencent.angel.spark.ml.util.SparkUtils
+import org.apache.spark.sql.{DataFrame, SparkSession}
+import org.apache.spark.sql.types._
 import org.apache.spark.{SparkConf, SparkContext}
-import org.apache.spark.rdd.RDD
-import org.apache.spark.storage.StorageLevel
-
-import scala.util.Random
 
 object LINEExample2 {
   def main(args: Array[String]): Unit = {
@@ -41,13 +37,8 @@ object LINEExample2 {
       conf.set(s"spark.hadoop.${AngelConf.ANGEL_LOAD_MODEL_PATH}", oldModelInput)
     }
 
-    val sc = new SparkContext(conf)
-
-    conf.set(AngelConf.ANGEL_PS_PARTITION_SOURCE_CLASS, classOf[PartitionSourceArray].getName)
-    conf.set(AngelConf.ANGEL_PS_BACKUP_MATRICES, "")
-    conf.set(AngelConf.ANGEL_PS_BACKUP_INTERVAL_MS, "100000000")
-    conf.set("io.file.buffer.size", "16000000");
-    conf.set("spark.hadoop.io.file.buffer.size", "16000000");
+    val mode = params.getOrElse("mode", "yarn-cluster")
+    val sc = start(mode)
 
     val executorJvmOptions = " -verbose:gc -XX:-PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:<LOG_DIR>/gc.log " +
       "-XX:+UseG1GC -XX:MaxGCPauseMillis=1000 -XX:G1HeapRegionSize=32M " +
@@ -55,7 +46,7 @@ object LINEExample2 {
     println(s"executorJvmOptions = ${executorJvmOptions}")
     conf.set("spark.executor.extraJavaOptions", executorJvmOptions)
 
-    PSContext.getOrCreate(sc)
+    //PSContext.getOrCreate(sc)
 
     val input = params.getOrElse("input", null)
     val output = params.getOrElse("output", "")
@@ -72,7 +63,26 @@ object LINEExample2 {
     val order = params.get("order").fold(2)(_.toInt)
     val saveModelInterval = params.getOrElse("saveModelInterval", "10").toInt
     val checkpointInterval = params.getOrElse("checkpointInterval", "2").toInt
+    val saveMeta = params.getOrElse("saveMeta", "false").toBoolean
 
+    val isWeight = params.getOrElse("isWeight", "false").toBoolean
+    val srcIndex = params.getOrElse("srcIndex", "0").toInt
+    val dstIndex = params.getOrElse("dstIndex", "1").toInt
+    val weightIndex = params.getOrElse("weightIndex", "2").toInt
+    val sep = params.getOrElse("sep", "space") match {
+      case "space" => " "
+      case "comma" => ","
+      case "tab" => "\t"
+    }
+
+    var edges:DataFrame = null
+    if (input.trim.startsWith("tdw://")) {
+      edges = GraphIO.load(input, isWeighted = isWeight,
+        srcIndex = srcIndex, dstIndex = dstIndex,
+        weightIndex = weightIndex, sep = sep)
+    } else {
+      edges = load(input, isWeight, sep)
+    }
 
     val numCores = SparkUtils.getNumCores(conf)
 
@@ -80,65 +90,72 @@ object LINEExample2 {
     val numDataPartitions = (numCores * 6.25).toInt
     println(s"numDataPartitions=$numDataPartitions")
 
-    val data = sc.textFile(input)
-    data.persist(StorageLevel.DISK_ONLY)
-
-    var corpus: RDD[Array[Int]] = null
-
-    if (withRemapping) {
-      val temp = Features.corpusStringToInt(data)
-      corpus = temp._1
-      temp._2.map(f => s"${f._1}:${f._2}").saveAsTextFile(output + "/mapping")
-    } else {
-      corpus = Features.corpusStringToIntWithoutRemapping(data)
-    }
-
-    val(maxNodeId, docs) = if (withSubSample) {
-      corpus.persist(StorageLevel.DISK_ONLY)
-      val subsampleTmp = SubSampling.sampling(corpus)
-      (subsampleTmp._1, subsampleTmp._2.repartition(numDataPartitions))
-    } else {
-      val tmp = corpus.repartition(numDataPartitions)
-      (tmp.map(_.max).max().toLong + 1, tmp)
-    }
-    val edges = docs.map{
-      arr =>
-        (arr(0), arr(1))
-    }
-
-    edges.persist(StorageLevel.DISK_ONLY)
-
-    val numEdge = edges.count()
-    println(s"numEdge=$numEdge maxNodeId=$maxNodeId")
-
-    corpus.unpersist()
-    data.unpersist()
-
-    val param = new Param()
-      .setLearningRate(stepSize)
-      .setEmbeddingDim(embeddingDim)
-      .setBatchSize(batchSize)
-      .setSeed(Random.nextInt())
-      .setNumPSPart(Some(numPartitions))
-      .setNumEpoch(numEpoch)
-      .setNegSample(numNegSamples)
-      .setMaxIndex(maxNodeId)
-      .setNumRowDataSet(numEdge)
+    val line = new LINE()
+      .setEmbedding(embeddingDim)
+      .setNegative(numNegSamples)
+      .setStepSize(stepSize)
       .setOrder(order)
-      .setModelCPInterval(checkpointInterval)
-      .setModelSaveInterval(saveModelInterval)
+      .setEpochNum(numEpoch)
+      .setBatchSize(batchSize)
+      .setPartitionNum(numDataPartitions)
+      .setPSPartitionNum(numPartitions)
+      .setIsWeighted(isWeight)
+      .setRemapping(withRemapping)
+      .setSaveModelInterval(saveModelInterval)
+      .setCheckpointInterval(checkpointInterval)
+      .setOutput(output)
+      .setSaveMeta(saveMeta)
 
-    val model = new LINEModel(param)
-    if(oldModelInput != null) {
-      println(s"load old model from path ${oldModelInput}")
-    } else {
-      model.randomInitialize(Random.nextInt())
-    }
+    line.transform(edges)
 
-    model.train(edges, param, output)
-    model.save(output, numEpoch)
+    line.save(output, numEpoch, saveMeta)
+  }
 
-    PSContext.stop()
-    sc.stop()
+  def start(mode: String): SparkContext = {
+    val conf = new SparkConf()
+
+    // Set specific parameters for LINE
+    conf.set(AngelConf.ANGEL_PS_PARTITION_SOURCE_CLASS, classOf[PartitionSourceArray].getName)
+    // Close the automatic checkpoint
+    conf.set("spark.hadoop." + AngelConf.ANGEL_PS_BACKUP_AUTO_ENABLE, "false")
+    conf.set("spark.hadoop." + AngelConf.ANGEL_PS_JVM_USE_PARALLEL_GC, "true")
+    conf.set("spark.hadoop." + AngelConf.ANGEL_PS_JVM_PARALLEL_GC_USE_ADAPTIVE_SIZE, "false")
+    conf.set("io.file.buffer.size", "16000000");
+    conf.set("spark.hadoop.io.file.buffer.size", "16000000");
+
+    // Add jvm parameters for executors
+    val executorJvmOptions = " -verbose:gc -XX:-PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:<LOG_DIR>/gc.log " +
+      "-XX:+UseG1GC -XX:MaxGCPauseMillis=1000 -XX:G1HeapRegionSize=32M " +
+      "-XX:InitiatingHeapOccupancyPercent=50 -XX:ConcGCThreads=4 -XX:ParallelGCThreads=4 "
+    println(s"executorJvmOptions = ${executorJvmOptions}")
+    conf.set("spark.executor.extraJavaOptions", executorJvmOptions)
+
+    conf.setMaster(mode)
+    conf.setAppName("LINE")
+    val sc = new SparkContext(conf)
+    //PSContext.getOrCreate(sc)
+    sc
+  }
+
+  def load(input:String, isWeighted:Boolean, sep: String = " ") = {
+    val ss = SparkSession.builder().getOrCreate()
+
+    val schema = if (isWeighted) {
+    StructType(Seq(
+      StructField("src", StringType, nullable = false),
+      StructField("dst", StringType, nullable = false),
+      StructField("weight", FloatType, nullable = false)
+    ))
+  } else {
+    StructType(Seq(
+      StructField("src", StringType, nullable = false),
+      StructField("dst", StringType, nullable = false)
+    ))
+  }
+    ss.read
+      .option("sep", sep)
+      .option("header", "false")
+      .schema(schema)
+      .csv(input)
   }
 }
